// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disable btn 1`] = `
.c0 {
  width: medium;
  height: medium;
  cursor: default;
  color: #fff;
  background-color: #000;
  font-size: 14px;
  background-color: #999;
  border-color: #999;
  pointer-events: none;
}

<Button
  disabled={true}
>
  <Component
    theme={
      Object {
        "palette": Object {
          "primary": Object {
            "contrastText": "#FFF",
            "dark": "#cf2557",
            "light": "#fc688e",
            "main": "#F62F5E",
          },
          "secondary": Array [
            "#c2185b",
            "#e91e63",
            "#f06292",
            "#f8bbd0",
          ],
        },
      }
    }
  >
    <styled.button
      disabled={true}
      size="medium"
      theme={
        Object {
          "kind": "dark",
        }
      }
      variant="normal"
    >
      <button
        className="c0"
        disabled={true}
        size="medium"
      >
        Disable button
      </button>
    </styled.button>
  </Component>
</Button>
`;

exports[`Button primary large btn 1`] = `
.c0 {
  width: large;
  height: large;
  cursor: default;
  color: #fff;
  background-color: #000;
  font-size: 20px;
}

<Button
  size="large"
>
  <Component
    theme={
      Object {
        "palette": Object {
          "primary": Object {
            "contrastText": "#FFF",
            "dark": "#cf2557",
            "light": "#fc688e",
            "main": "#F62F5E",
          },
          "secondary": Array [
            "#c2185b",
            "#e91e63",
            "#f06292",
            "#f8bbd0",
          ],
        },
      }
    }
  >
    <styled.button
      size="large"
      theme={
        Object {
          "kind": "dark",
        }
      }
      variant="normal"
    >
      <button
        className="c0"
        size="large"
      >
        Primary
      </button>
    </styled.button>
  </Component>
</Button>
`;
